[package]
name = "r8tes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6"
axum-server = { version = "0.4", features = ["tls-rustls"] }
chrono = "0.4"
kube = { version = "0.77.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
rcgen = "0.10"
serde = "1"
env_logger = "0.9"
log = "0.4.16"
serde_yaml = "0.8"
serde_json = "1"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
