[package]
name = "r8tes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
kube = { version = "^0.84.0", default-features = false, features = ["admission"] }
k8s-openapi = { version = "0.18.0", default-features = false }
rcgen = "0.10"
serde = "1"
env_logger = "0.9"
log = "0.4.16"
serde_yaml = "0.8"
serde_json = "1"
anyhow = "1.0.72"
schemars = "0.8"
thiserror = "1.0.44"
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"




[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime", "refresh"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime", "kube/unstable-runtime"]
refresh = ["kube/oauth", "kube/oidc"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]